# IO-WI-2024

./: README.md
stages/: 1.md  2.md  3.md  4.md  5.md  6.md
sumo-app/: pyproject.toml
sumo-app/notebooks/: stage_2.ipynb  stage_3.ipynb  stage_4.ipynb  stage_5.ipynb  stage_6.ipynb
sumo-app/sumo_conf/large-traffic/: routes.rou.xml  trips.xml
sumo-app/sumo_conf/massive-traffic/: massive.sumocfg  routes.rou.xml  trips.xml
sumo-app/sumo_conf/medium-traffic/: map.net.xml  routes.rou.xml  trips.xml
sumo-app/sumo_conf/scenario1/: build.bat  osm.netccfg  osm.passenger.rou.xml  osm.passenger.trips.xml  osm.passenger.trips.xml.tmp  osm.polycfg  osm.sumocfg
sumo-app/sumo_conf/small-traffic/: routes.rou.xml  trips.xml
