[tool.poetry]
name = "sumo-app"
version = "0.1.0"
description = ""
authors = ["Wojciech Przybytek <wprzybytek@student.agh.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
traci = "^1.20.0"
libsumo = "^1.20.0"
pymoo = "^0.6.1.1"
black = {extras = ["jupyter"], version = "^24.4.2"}
optuna = "^3.6.1"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
